--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>24点：极简大师</title>
-    <meta name="description" content="极简 24 点游戏" />
+    <title>24点：算数大师</title>
+    <meta name="description" content="24点游戏" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
