refactor: Rename app to 数字大师
Updates the application name and related meta tags to reflect the new app name "数字大师". Also cleans up some redundant comments in game logic and adjusts layout for better mobile experience.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>24点：算数大师</title>
-    <meta name="description" content="24点游戏" />
+    <title>数字大师</title>
+    <meta name="description" content="极简 24 点游戏" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -65,6 +65,5 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module"  src="/index.tsx"></script>
   </body>
 </html>
